# faihelpers

./: .gitignore  README.md  SPEC_CHAT.md  SPEC_DOCMEM.md  pyproject.toml
pjpd/: docmem.txt
src/: __main__.py  main.py
static/: fai_bash_root.txt
static/css/: index.css  style.css
static/js/: app.js  chat.js  docmem.js  docmem_chat.js  docmem_commands.js  index.js  system_commands.js  tools.js
templates/: index.html
test/: test_docmem_update_context.py  test_main.py
